Bugfix: Small tweak with text wrapping

--- a/src/components/styles/SideBar.css
+++ b/src/components/styles/SideBar.css
@@ -53,11 +53,15 @@
   padding: 0;
   max-height: 24px;
   font-weight: 700;
+  text-align: left;
+  text-wrap: nowrap;
+  color: #000;
 }
 
 .sidebar__btn:hover {
   text-decoration: underline;
   cursor: pointer;
+  color: #555;
 }
 
 @media screen and (max-width: 430px) {
